--- a/post-detail.html
+++ b/post-detail.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/577c3f1cbb.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <section>
@@ -45,6 +46,196 @@
         <a href="about.html">Post-Details</a>
       </div>
     </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="trat-post">
+      <h2>Build a Beautiful Blog With Ease</h2>
+      <div class="info">
+        <p>
+          <a href="/archo/post-detail.html">ALEX SMITH</a>
+          /
+          <a href="/archo/post-detail.html">August 6 , 2022</a>
+          /
+          <a href="/archo/post-detail.html">Web Design</a>
+        </p>
+      </div>
+    </div>
+    <div class="image-start">
+      <img src="assets/img/single.jpg">
+    </div>
+    <div class="content pt-20">
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <div class="cont">
+            <div class="spacial">
+              <p>Never ever think of giving up. Winners never quit and quitters never win. Take all negative words out of your mental dictionary and focus on the solutions with utmost conviction and patience. The battle is never lost until you've abandon your vision.</p>
+            </div>
+            <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a healthy environment for self esteem is that it needs be nurturing. The main component of a healthy env for self esteem The main compont be nurturing It should provide unconditional warmth. The main component of a healthy env for self esteem The main compont be nurturing It should provide unconditional</p>
+            <h6>- We all intend to plan ahead.</h6>
+            <p>We all intend to plan ahead, but too often let the day-to-day minutia get in the way of making a calendar for the year. Sure, you can't know every detail to anticipate. Heck, you can't know half the priorities that will pop up in any particular month. But you can plan for big picture seasonality, busy-times, and events.</p>
+            <ul>
+              <li><span>01</span> Integer in volutpat libero.</li>
+              <li><span>02</span> Vivamus maximus ultricies pulvinar.</li>
+              <li><span>03</span> priorities that will pop up in any particular month.</li>
+              <li><span>04</span> We all intend to plan ahead.</li>
+              <li><span>05</span> The main component of a healthy env for self esteem.</li>
+            </ul>
+            <div class="quotes text-center">
+              <p>Never ever think of giving up. Winners never quit and quitters never win. Take all<br>negative words out of your mental dictionary and focus on the solutions with utmost<br>conviction and patience. The battle is never lost until you've abandon your vision.</p>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="mb-10">
+                  <img src="assets/img/single.jpg" alt=""></div></div><div class="col-md-6">
+                    <div class="mb-10"><img src="assets/img/single.jpg" alt=""></div>
+                  </div>
+                </div>
+                <p>We all intend to plan ahead, but too often let the day-to-day minutia get in the way of making a calendar for the year. Sure, you can't know every detail to anticipate. Heck, you can't know half the priorities that will pop up in any particular month. But you can plan for big picture seasonality, busy-times, and events.</p>
+              <div class="share-info">
+                <div class="social">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-behance"></i></a>
+                </div>
+                <div class="tags">
+                  <a href="/blog-details/#">Web</a>,
+                  <a href="/blog-details/#">Themeforest</a>,
+                  <a href="/blog-details/#">ThemesCamp</a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+             <div class="author">
+              <div class="author-img">
+                <img src="assets/img/post-author.jpg" alt="">
+              </div>
+              </div>
+              </div>
+              <div class="col-lg-6">
+              <div class="info">
+                <h6><span>author :</span> Jorden Griffin</h6>
+                <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a healthy environment.</p>
+                  <div class="social">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-behance"></i></i></a>
+                  </div>
+                </div>
+              </div>
+             </div>
+            </div>
+            </div>
+          </div>
+          <div class="page-control">
+            <div class="btn-group" role="group">
+              <button type="next" class="btn btn-default">PREV POST</button>
+              <button type="next" class="btn btn-default"><i class="fas fa-th-large"></i></button>
+              <button type="next" class="btn btn-default">NEXT POST</button>
+            </div>
+          </div>
+          <div class="comments-area">
+            <h5>Comments:</h5>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="comet"></div>
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="comet-img">
+                      <img src="assets/img/post-author.jpg">
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="comet-info">
+                      <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
+                      <span class="replay">
+                        <a href="/blog-details/#">
+                          Replay 
+                          <i class="fas fa-reply"></i>
+                        </a>
+                      </span>
+                      <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main<br>compont of a healthy environment.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-10 col-md-offset-2">
+                <div class="comet"></div>
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="comet-img">
+                      <img src="assets/img/post-author.jpg">
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="comet-info">
+                      <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
+                      <span class="replay">
+                        <a href="/blog-details/#">
+                          Replay 
+                          <i class="fas fa-reply"></i>
+                        </a>
+                      </span>
+                      <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main<br>compont of a healthy environment.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="comet"></div>
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="comet-img">
+                      <img src="assets/img/post-author.jpg">
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div class="comet-info">
+                      <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
+                      <span class="replay">
+                        <a href="/blog-details/#">
+                          Replay 
+                          <i class="fas fa-reply"></i>
+                        </a>
+                      </span>
+                      <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main<br>compont of a healthy environment.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="comment-form">
+            <form>
+              <div class="form-group">
+                <label for="comment"></label>
+                <input type="comment" class="form-control " id="comment" aria-describedby="commentHelp" placeholder="Your Comment">
+              </div>
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-md-6">
+                    <label for="Name"></label>
+         <input type="name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Name">
+                  </div>
+                  <div class="col-md-6">
+                    <label for="Email"></label>
+         <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Email">
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+        </div>
+        </div>
+       
   </div>
 </section>
 <section>
