--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 <body>
 <section>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+<nav class="navbar fixed-top ">
+  <div class="container-fluid black">
     <div class="navbar-header">
-      <img class="navbar-brand" src="assets/img/logo-dark.png">
+      <img class="navbar-brand black1" src="assets/img/logo-light (1).png" style="margin-top: 1em;">
     </div>
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
@@ -51,9 +51,9 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="assets/img/1.jpg" alt="1">
+      <img src="assets/img/1-new.png" alt="1">
       <div class="carousel-caption">
-        <div class="logo is-animetion">
+        <div class="logo-is-animetion">
           <span>I</span>
           <span>n</span>
           <span>n</span>
@@ -67,7 +67,7 @@
           <span>e</span>
         </div>
         <br>
-        <div class="logo is-animetion1">
+        <div class="logo-is-animetion1">
           <span>A</span>
           <span>r</span>
           <span>c</span>
@@ -89,7 +89,7 @@
     <div class="item">
       <img src="assets/img/2.jpg" alt="2">
       <div class="carousel-caption">
-        <div class="logo is-animetion">
+        <div class="logo-is-animetion">
           <span>C</span>
           <span>l</span>
           <span>a</span>
@@ -102,7 +102,7 @@
           <span>n</span>
           <span>d</span>
         </div>
-        <div class="logo is-animetion1">
+        <div class="logo-is-animetion1">
           <span>M</span>
           <span>o</span>
           <span>d</span>
@@ -119,7 +119,7 @@
     <div class="item">
       <img src="assets/img/3.jpg" alt="3">
       <div class="carousel-caption">
-        <div class="logo is-animetion">
+        <div class="logo-is-animetion">
           <span>E</span>
           <span>l</span>
           <span>e</span>
@@ -131,7 +131,7 @@
           <span>&</span>
           
         </div>
-        <div class="logo is-animetion1">
+        <div class="logo-is-animetion1">
           <span>U</span>
           <span>n</span>
           <span>i</span>
@@ -153,7 +153,7 @@
     <div class="item">
       <img src="assets/img/4.jpg" alt="4">
       <div class="carousel-caption">
-        <div class="logo is-animetion">
+        <div class="logo-is-animetion">
           <span>i</span>
           <span>n</span>
           <span>t</span>
@@ -164,7 +164,7 @@
           <span>r</span>
         </div>
         <br>
-        <div class="logo is-animetion1">
+        <div class="logo-is-animetion1">
           <span>D</span>
           <span>e</span>
           <span>s</span>
@@ -604,6 +604,24 @@ slide2.style.left = xx - x + "px";
     pauseOnHover: true
 });
 </script>
+<script>
+      
+$(document).ready(function(){
+  $(window).scroll(function(){
+  	var scroll = $(window).scrollTop();
+	  if (scroll > 300) {
+	    $(".black").css("background" , "rgb(255, 255, 255)");
+	  }
+    if(scroll > 300){
+      $(".black")
+    }
+
+	  else{
+		  $(".black").css("background" , "transparent");  	
+	  }
+  })
+})
+    </script>
 
 </body>
 </html>
