--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/577c3f1cbb.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background: #181818;">
 <section>
 <nav class="navbar fixed-top">
   <div class="container-fluid black">
@@ -32,15 +33,69 @@
   </div>
 </nav>
 </section>
-<section>
+<section style="margin-top:-1.5em;">
   <div class="container">
-    <div class="background"></div>
-    <div class="context1">
+    <div class="background-contact"></div>
+    <div class="context34">
       <h1>Contact Us</h1>
       <div class="path">
         <a href="index.html">Home</a>
         <span>/</span>
-        <a href="about.html">Contact Us</a>
+        <a href="about.html" class="pathy">Contact Us</a>
+      </div>
+    </div>
+  </div>
+</section>
+<section style="margin-top:4em;margin-bottom:4em ;">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card contact" style="width:360px">
+          <div class="card-body">
+            <i class="fa-solid fa-mobile-screen"></i>
+            <h6 class="card-title" style=" font-size: 20px;
+            color: #c5a47e;
+            margin-bottom: 10px;
+            font-family: CCFont,sans-serif;margin-left: 3em;">Call Us</h6>
+            <p class="card-text" style="color: #9f9f9f;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 2;
+            margin: 0;margin-left: 4em;">+7 (111) 1234 56789<br>+1 (000) 9876 54321</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card contact" style="width:360px">
+          <div class="card-body">
+            <i class="fa-regular fa-envelope-open"></i>
+            <h6 class="card-title" style=" font-size: 20px;
+            color: #c5a47e;
+            margin-bottom: 10px;
+            font-family: CCFont,sans-serif;margin-left: 3em;">Email Us</h6>
+            <p class="card-text"  style="color: #9f9f9f;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 2;
+            margin: 0;margin-left: 4em;">contact@Archo.com<br>Username@website.com</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card contact" style="width:360px">
+          <div class="card-body">
+            <i class="fa-regular fa-map"></i>
+            <h6 class="card-title" style=" font-size: 20px;
+            color: #c5a47e;
+            margin-bottom: 10px;
+            font-family: CCFont,sans-serif;margin-left: 3em;">Address</h6>
+            <p class="card-text"  style="color: #9f9f9f;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 2;
+            margin: 0;margin-left: 4em;"> B17 Princess Road, London, Greater<br>London NW18JR, United Kingdom</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -48,53 +103,41 @@
 <section>
   <div class="row">
     <div class="col-lg-6">
-      <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Rue de Rivoli, 75001 Paris,&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embedmapgenerator.com/">embed google maps in website</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
+      <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=600&amp;hl=en&amp;q=Louvre museum, 75001 Paris, فرنسا  &amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embedmapgenerator.com/">embed google maps in website</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:600px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:600px;}.gmap_iframe {height:600px!important;}</style></div>
     </div>
-    <div class="col-lg-6">
-      <form>
+    <div class="col-lg-6" style="padding: 120px 5%;">
+      <form class="formula">
         <div class="form-group"></div>
          <label for="Name"></label>
          <input type="name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Name">
          <label for="Email"></label>
          <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Email">
           <label for="Message"></label>
-         <input type="message" class="form-control" id="Message" aria-describedby="messageHelp" placeholder="Message"> 
+          <textarea class="form-control" id="textAreaExample1" rows="4" placeholder="Message"></textarea>
+          
         </div>
-        <button type="submit" class="btn btn-primary">Send Message</button>
+        <button type="submit" class="btn btn-primary bbs" style="font-size: 16px;
+        font-weight: 500;
+        letter-spacing: 1px;
+        position: absolute;
+        top: -1px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        width: 170px;
+        height: 50px;
+        text-align: center;
+        line-height: 34px;
+        font-family: 'Jost', sans-serif;
+        position: relative;
+        color: black;
+        background-color: #c5a47e;
+        border:2px solid black;
+        margin-left: 6em;
+    margin-top: -5em;
+    ">Send Message</button>
       </form>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="card" style="width:400px">
-          <div class="card-body">
-            <img src="assets/img/smartphone.png">
-            <h6 class="card-title">Call Us</h6>
-            <p class="card-text">+7 (111) 1234 56789<br>+1 (000) 9876 54321</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="card" style="width:400px">
-          <div class="card-body">
-            <img src="assets/img/open-mail.png">
-            <h6 class="card-title">Email Us</h6>
-            <p class="card-text">contact@Archo.com<br>Username@website.com</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="card" style="width:400px">
-          <div class="card-body">
-            <img src="assets/img/map.png">
-            <h6 class="card-title">Address</h6>
-            <p class="card-text">B17 Princess Road, London, Greater<br>London NW18JR, United Kingdom</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
