blogs css complete

--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background: #181818;">
 <section>
 <nav class="navbar  fixed-top">
   <div class="container-fluid black">
@@ -32,96 +32,118 @@
   </div>
 </nav>
 </section>
-<section>
+
+<section style="margin-top:-1.5em;">
   <div class="container">
-    <div class="background"></div>
-    <div class="context1">
+    <div class="background" style="background-image:url(assets/img/pg1.jpg)"></div>
+    <div class="context34" style="top: 19em;
+    left: 47.5em;">
       <h1>Our Blogs</h1>
       <div class="path">
         <a href="index.html">Home</a>
         <span>/</span>
-        <a href="about.html">Blogs</a>
+        <a href="about.html" class="pathy">Blogs</a>
       </div>
     </div>
   </div>
 </section>
-<section>
+<section style="margin-top: 10em;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img src="assets/img/couch.jpg">
-        <div class="row">
-          <div class="col-lg-2">
-            <a href="/archo/post-detail.html">
-              <span>06</span><br>
-              <span>Aug 2022</span>
+        <div class="divs-main"></div>
+         <img src="assets/img/couch.jpg">
+        </div>
+        <div class="row" style="margin-bottom:8em; ">
+          <div class="col-lg-2" style=" margin-top: 2em;">
+            <a href="/archo/post-detail.html" class="bert">
+              <span class="num">06</span><br>
+              <span class="date">Aug 2022</span>
             </a>
           </div>
-          <div class="col-lg-10">
+          <div class="col-lg-10" style=" margin-top: 2em;">
             <div class="tags">
               <a href="#">WordPress</a>
               <a href="#">Themeforest</a>
               <a href="#">Archo</a>
             </div>
-            <h4><a href="/archo/post-detail.html">Build a Beautiful Blog With Ease</a></h4>
-            <p>Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love<br>of what you are doing.</p>
-            <a href="/archo/post-detail.html">READ MORE</a>
+            <h4 class="head-for"><a href="/archo/post-detail.html">Build a Beautiful Blog With Ease</a></h4>
+            <p style="color: #9f9f9f;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 2;
+            margin: 0;">Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love<br>of what you are doing.</p>
+            <a href="/archo/post-detail.html" class="read">READ MORE</a>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <img src="assets/img/blog1.jpg">
-          <div class="row">
-            <div class="col-lg-2">
-              <a href="/archo/post-detail.html">
-                <span>06</span><br>
-                <span>Aug 2022</span>
+          <div class="divs-main"></div>
+         <img src="assets/img/blog1.jpg">
+        </div>
+          <div class="row" style="margin-bottom:8em; ">
+            <div class="col-lg-2" style=" margin-top: 2em;">
+              <a href="/archo/post-detail.html" class="bert">
+                <span  class="num">06</span><br>
+                <span class="date">Aug 2022</span>
               </a>
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-10" style=" margin-top: 2em;">
               <div class="tags">
                 <a href="#">WordPress</a>
                 <a href="#">Themeforest</a>
                 <a href="#">Archo</a>
               </div>
-              <h4><a href="/archo/post-detail.html">Build a Beautiful Blog With Ease</a></h4>
-              <p>Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love<br>of what you are doing.</p>
-              <a href="/archo/post-detail.html">READ MORE</a>
+              <h4 class="head-for"><a href="/archo/post-detail.html">Build a Beautiful Blog With Ease</a></h4>
+              <p style="color: #9f9f9f;
+              font-size: 15px;
+              font-weight: 400;
+              line-height: 2;
+              margin: 0;">Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love<br>of what you are doing.</p>
+              <a href="/archo/post-detail.html" class="read">READ MORE</a>
             </div>
           </div>
         </div>
-      </div>
       <div class="row">
         <div class="col-lg-12">
-          <img src="assets/img/small-couch.jpg">
-          <div class="row">
-            <div class="col-lg-2">
-              <a href="/archo/post-detail.html">
-                <span>06</span><br>
-                <span>Aug 2022</span>
+          <div class="divs-main"></div>
+         <img src="assets/img/small-couch.jpg">
+        </div>
+          <div class="row" style="margin-bottom:8em;">
+            <div class="col-lg-2" style=" margin-top: 2em;">
+              <a href="/archo/post-detail.html" class="bert">
+                <span  class="num">06</span><br>
+                <span class="date">Aug 2022</span>
               </a>
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-10" style=" margin-top: 2em;">
               <div class="tags">
                 <a href="#">WordPress</a>
                 <a href="#">Themeforest</a>
                 <a href="#">Archo</a>
               </div>
-              <h4><a href="/archo/post-detail.html">Build a Beautiful Blog With Ease</a></h4>
-              <p>Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love<br>of what you are doing.</p>
-              <a href="/archo/post-detail.html">READ MORE</a>
+              <h4 class="head-for"><a href="/archo/post-detail.html">Build a Beautiful Blog With Ease</a></h4>
+              <p style="color: #9f9f9f;
+              font-size: 15px;
+              font-weight: 400;
+              line-height: 2;
+              margin: 0;">Success is no accident. It is hard work, perseverance, learning, studying, sacrifice and most of all, love<br>of what you are doing.</p>
+              <a href="/archo/post-detail.html" class="read">READ MORE</a>
             </div>
           </div>
         </div>
-      </div>
+      
       <div class="buttons-page">
-        <button type="button" class="btn btn-default">1</button>
-        <button type="button" class="btn btn-default">2</button>
+        <button type="button" class="btn btn-active" style="padding: 0px;border: 1px solid #c5a47e;">1</button>
+        <button type="button" class="btn btn-default" style="padding: 0px;">2</button>
         <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span></button>
       </div>
     </div>
-  </div>
+  
+    
+  
+
 </section>
 <section>
   <div class="container">
