--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 </section>
 <section style="margin-top:-1.5em;">
   <div class="container">
-    <div class="background-contact"></div>
+    <div class="background" style="background-image: url(https://archo-react.vercel.app/assets/img/pg2.jpg);"></div>
     <div class="context34">
       <h1>Contact Us</h1>
       <div class="path">
