post detail half complete

--- a/post-detail.html
+++ b/post-detail.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/577c3f1cbb.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background: #181818;">
 <section>
 <nav class="navbar fixed-top">
   <div class="container-fluid black">
@@ -33,17 +33,18 @@
   </div>
 </nav>
 </section>
-<section>
+<section style="margin-top:-1.5em;">
   <div class="container">
-    <div class="background"></div>
-    <div class="context1">
+    <div class="background" style="background-image: url(assets/img/pg1.jpg);"></div>
+    <div class="context34" style="top: 21em;
+    left: 45.5em;">
       <h1>Post Details</h1>
       <div class="path">
         <a href="index.html">Home</a>
         <span>/</span>
         <a href="about.html">Blog</a>
         <span>/</span>
-        <a href="about.html">Post-Details</a>
+        <a href="about.html" class="pathy">Post-Details</a>
       </div>
     </div>
   </div>
@@ -55,7 +56,7 @@
       <div class="info">
         <p>
           <a href="/archo/post-detail.html">ALEX SMITH</a>
-          /
+         /
           <a href="/archo/post-detail.html">August 6 , 2022</a>
           /
           <a href="/archo/post-detail.html">Web Design</a>
@@ -73,17 +74,27 @@
               <p>Never ever think of giving up. Winners never quit and quitters never win. Take all negative words out of your mental dictionary and focus on the solutions with utmost conviction and patience. The battle is never lost until you've abandon your vision.</p>
             </div>
             <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a healthy environment for self esteem is that it needs be nurturing. The main component of a healthy env for self esteem The main compont be nurturing It should provide unconditional warmth. The main component of a healthy env for self esteem The main compont be nurturing It should provide unconditional</p>
-            <h6>- We all intend to plan ahead.</h6>
+            <h6 class="spacial">- We all intend to plan ahead.</h6>
             <p>We all intend to plan ahead, but too often let the day-to-day minutia get in the way of making a calendar for the year. Sure, you can't know every detail to anticipate. Heck, you can't know half the priorities that will pop up in any particular month. But you can plan for big picture seasonality, busy-times, and events.</p>
-            <ul>
-              <li><span>01</span> Integer in volutpat libero.</li>
-              <li><span>02</span> Vivamus maximus ultricies pulvinar.</li>
-              <li><span>03</span> priorities that will pop up in any particular month.</li>
-              <li><span>04</span> We all intend to plan ahead.</li>
-              <li><span>05</span> The main component of a healthy env for self esteem.</li>
+            <ul class="spacial">
+              <li><span style="margin-right: 10px;
+                font-weight: 500;
+                font-size: 13px;">01</span> Integer in volutpat libero.</li>
+              <li><span style="margin-right: 10px;
+                font-weight: 500;
+                font-size: 13px;">02</span> Vivamus maximus ultricies pulvinar.</li>
+              <li><span style="margin-right: 10px;
+                font-weight: 500;
+                font-size: 13px;">03</span> priorities that will pop up in any particular month.</li>
+              <li><span style="margin-right: 10px;
+                font-weight: 500;
+                font-size: 13px;">04</span> We all intend to plan ahead.</li>
+              <li><span style="margin-right: 10px;
+                font-weight: 500;
+                font-size: 13px;">05</span> The main component of a healthy env for self esteem.</li>
             </ul>
             <div class="quotes text-center">
-              <p>Never ever think of giving up. Winners never quit and quitters never win. Take all<br>negative words out of your mental dictionary and focus on the solutions with utmost<br>conviction and patience. The battle is never lost until you've abandon your vision.</p>
+              <p>Never ever think of giving up. Winners never quit and quitters never win. Take all negative words out of your mental dictionary and focus on the solutions with utmost conviction and patience. The battle is never lost until you've abandon your vision.</p>
             </div>
             <div class="row">
               <div class="col-md-6">
@@ -92,48 +103,55 @@
                     <div class="mb-10"><img src="assets/img/single.jpg" alt=""></div>
                   </div>
                 </div>
-                <p>We all intend to plan ahead, but too often let the day-to-day minutia get in the way of making a calendar for the year. Sure, you can't know every detail to anticipate. Heck, you can't know half the priorities that will pop up in any particular month. But you can plan for big picture seasonality, busy-times, and events.</p>
+                <p style="border-bottom: 1px solid #9f9f9f9f;">We all intend to plan ahead, but too often let the day-to-day minutia get in the way of making a calendar for the year. Sure, you can't know every detail to anticipate. Heck, you can't know half the priorities that will pop up in any particular month. But you can plan for big picture seasonality, busy-times, and events.</p>
               <div class="share-info">
                 <div class="social">
                   <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                   <a href="#"><i class="fa-brands fa-twitter"></i></a>
                   <a href="#"><i class="fa-brands fa-behance"></i></a>
                 </div>
-                <div class="tags">
+                <div class="tags2">
                   <a href="/blog-details/#">Web</a>,
                   <a href="/blog-details/#">Themeforest</a>,
                   <a href="/blog-details/#">ThemesCamp</a>
                 </div>
               </div>
             </div>
+            <div class="author">
             <div class="row">
-              <div class="col-lg-6">
-             <div class="author">
-              <div class="author-img">
-                <img src="assets/img/post-author.jpg" alt="">
-              </div>
-              </div>
-              </div>
-              <div class="col-lg-6">
-              <div class="info">
-                <h6><span>author :</span> Jorden Griffin</h6>
-                <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a healthy environment.</p>
-                  <div class="social">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-behance"></i></i></a>
+                 <div class="col-md-3">
+                  <div class="author-img">
+                    <img src="assets/img/post-author.jpg" style="width: 100%;">
                   </div>
-                </div>
+                 </div>
+                 <div class="col-md-9">
+                  <div class="info2">
+                    <h6><span class="auth">AUTHOR :</span> Jorden Griffin</h6>
+                    <p style="font-size:16px;">the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a healthy environment.</p>
+                    <div class="social1">
+                      <a href="#"><i class="fab fa-facebook-f"></i></a>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                      <a href="#"><i class="fab fa-behance"></i></a>
+                    </div>
+                  </div>
+               </div>
+               </div>
+                
               </div>
-             </div>
             </div>
             </div>
           </div>
           <div class="page-control">
-            <div class="btn-group" role="group">
-              <button type="next" class="btn btn-default">PREV POST</button>
-              <button type="next" class="btn btn-default"><i class="fas fa-th-large"></i></button>
-              <button type="next" class="btn btn-default">NEXT POST</button>
+            <div class="btn-group row" role="group">
+              <div class="col-md-5">
+              <button type="next" class="btn btn-default" style="width: 105%;text-align: left;">PREV POST</button>
+              </div>
+              <div class="col-md-1">
+              <button type="next" class="btn btn-default" style="width: 50%;"><i class="fas fa-th-large"></i></button>
+              </div>
+              <div class="col-md-5">
+                <button type="next" class="btn btn-default" style="width: 105%;margin-left: -25px;text-align: right;">NEXT POST</button>
+                </div>
             </div>
           </div>
           <div class="comments-area">
@@ -142,12 +160,12 @@
               <div class="col-md-12">
                 <div class="comet"></div>
                 <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-1">
                     <div class="comet-img">
-                      <img src="assets/img/post-author.jpg">
+                      <img src="assets/img/post-author.jpg" style="width: 100%;">
                     </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-11">
                     <div class="comet-info">
                       <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
                       <span class="replay">
@@ -166,12 +184,12 @@
               <div class="col-md-10 col-md-offset-2">
                 <div class="comet"></div>
                 <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-1">
                     <div class="comet-img">
-                      <img src="assets/img/post-author.jpg">
+                      <img src="assets/img/post-author.jpg" style="width: 100%;">
                     </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-11">
                     <div class="comet-info">
                       <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
                       <span class="replay">
@@ -190,12 +208,12 @@
               <div class="col-md-12">
                 <div class="comet"></div>
                 <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-1">
                     <div class="comet-img">
-                      <img src="assets/img/post-author.jpg">
+                      <img src="assets/img/post-author.jpg" style="width: 100%;">
                     </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-11">
                     <div class="comet-info">
                       <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
                       <span class="replay">
