--- a/blogs.html
+++ b/blogs.html
@@ -48,11 +48,12 @@
   </div>
 </section>
 <section style="margin-top: 10em;">
-  <div class="container">
+  <div class="container" style="width: 60%;
+  margin: auto;">
     <div class="row">
       <div class="col-lg-12">
         <div class="divs-main"></div>
-         <img src="assets/img/couch.jpg">
+         <img src="assets/img/couch.jpg" style="width: 100%;">
         </div>
         <div class="row" style="margin-bottom:8em; ">
           <div class="col-lg-2" style=" margin-top: 2em;">
@@ -80,7 +81,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="divs-main"></div>
-         <img src="assets/img/blog1.jpg">
+         <img src="assets/img/blog1.jpg" style="width: 100%;">
         </div>
           <div class="row" style="margin-bottom:8em; ">
             <div class="col-lg-2" style=" margin-top: 2em;">
@@ -108,7 +109,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="divs-main"></div>
-         <img src="assets/img/small-couch.jpg">
+         <img src="assets/img/small-couch.jpg" style="width: 100%;">
         </div>
           <div class="row" style="margin-bottom:8em;">
             <div class="col-lg-2" style=" margin-top: 2em;">
