--- a/post-detail.html
+++ b/post-detail.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 </section>
-<section>
+<section style="margin-bottom: 10em;">
   <div class="container">
     <div class="trat-post">
       <h2>Build a Beautiful Blog With Ease</h2>
@@ -156,7 +156,9 @@
           </div>
           <div class="comments-area">
             <h5>Comments:</h5>
-            <div class="row">
+            <div class="row" style="padding: 30px 0;
+            margin: 30px 0;
+            border-bottom: 1px solid #333;">
               <div class="col-md-12">
                 <div class="comet"></div>
                 <div class="row">
@@ -167,21 +169,22 @@
                   </div>
                   <div class="col-md-11">
                     <div class="comet-info">
-                      <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
+                      <h6>Jorden Griffin</h6><br><span> 6 Aug 2022</span>
                       <span class="replay">
                         <a href="/blog-details/#">
                           Replay 
                           <i class="fas fa-reply"></i>
                         </a>
                       </span>
-                      <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main<br>compont of a healthy environment.</p>
+                      <p class="same">the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a<br>healthy environment.</p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-md-10 col-md-offset-2">
+            <div class="row" style="padding: 30px 0;
+            margin: 30px 0;">
+              <div class="col-md-10 col-md-offset-2" style="border-bottom: 1px solid #333;">
                 <div class="comet"></div>
                 <div class="row">
                   <div class="col-md-1">
@@ -191,20 +194,22 @@
                   </div>
                   <div class="col-md-11">
                     <div class="comet-info">
-                      <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
+                      <h6>Jorden Griffin</h6><br><span> 6 Aug 2022</span>
                       <span class="replay">
                         <a href="/blog-details/#">
                           Replay 
                           <i class="fas fa-reply"></i>
                         </a>
                       </span>
-                      <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main<br>compont of a healthy environment.</p>
+                      <p class="same" style="font-size: 16px;">the main component of a healthy environment for self esteem is that it needs be nurturing. The main compont of a<br>healthy environment.</p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row" style="padding: 30px 0;
+            margin: 30px 0;
+            border-bottom: 1px solid #333;">
               <div class="col-md-12">
                 <div class="comet"></div>
                 <div class="row">
@@ -215,14 +220,14 @@
                   </div>
                   <div class="col-md-11">
                     <div class="comet-info">
-                      <h6>Jorden Griffin<br><span> 6 Aug 2022</span></h6>
+                      <h6>Jorden Griffin</h6><br><span> 6 Aug 2022</span>
                       <span class="replay">
                         <a href="/blog-details/#">
                           Replay 
                           <i class="fas fa-reply"></i>
                         </a>
                       </span>
-                      <p>the main component of a healthy environment for self esteem is that it needs be nurturing. The main<br>compont of a healthy environment.</p>
+                      <p class="same">the main component of a healthy environment for self esteem is that it needs be nurturing. The maincompont of a<br>healthy environment.</p>
                     </div>
                   </div>
                 </div>
@@ -232,22 +237,41 @@
           <div class="comment-form">
             <form>
               <div class="form-group">
-                <label for="comment"></label>
-                <input type="comment" class="form-control " id="comment" aria-describedby="commentHelp" placeholder="Your Comment">
+                <label for="Message"></label>
+          <textarea class="form-control" id="textAreaExample2" rows="5" placeholder=" Your Message"></textarea>
               </div>
               <div class="form-group">
                 <div class="row">
                   <div class="col-md-6">
                     <label for="Name"></label>
-         <input type="name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Name">
+         <input type="name" class="form-control" id="Name" aria-describedby="nameHelp" placeholder="Your Name">
                   </div>
                   <div class="col-md-6">
                     <label for="Email"></label>
-         <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Email">
+         <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Your Email">
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary get" style="font-size: 16px;
+              font-weight: 500;
+              letter-spacing: 1px;
+              position: absolute;
+              top: 88px;
+    left: -95px;
+              width: 100%;
+              height: 100%;
+              z-index: 2;
+              width: 170px;
+              height: 50px;
+              text-align: center;
+              line-height: 34px;
+              font-family: 'Jost', sans-serif;
+              position: relative;
+              color: black;
+              background-color: #c5a47e;
+              border:2px solid black;
+              margin-left: 6em;
+          margin-top: -5em;">Submit</button>
             </form>
           </div>
         </div>
