--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 </section>
-<section>
+<section style="padding: 120px 0;">
   <div class="container">
     <!-- MAIN (Center website) -->
 <div class="main">
