--- a/post-detail.html
+++ b/post-detail.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 </section>
-<section style="margin-bottom: 10em;">
+<section style="margin-bottom: 10em;padding: 120px 0px;">
   <div class="container">
     <div class="trat-post">
       <h2>Build a Beautiful Blog With Ease</h2>
