--- a/about.html
+++ b/about.html
@@ -94,9 +94,9 @@
     </div>
   </div>
 </section>
-<section>
+<section style="padding: 120px 0;">
   <div class="container">
-    <div class="main-header text-center"><h3>Best Features.</h3><div class="tex-bg"><h1>Services</h1></div></div>
+    <div class="main-header text-center" style="margin: 80px 0px;"><h3>Best Features.</h3><div class="tex-bg"><h1>Services</h1></div></div>
     <div class="row">
       <div class="col-lg-4">
         <div class="card hover-img trap1" style="width: 23em;">
@@ -130,7 +130,7 @@
       </div>
     </div>
   </div>
-</section>
+</section style="padding: 120px 0;">
 <section class="dotted">
   <div class="container">
     <div class="items">
@@ -201,7 +201,7 @@
   </div>
   </div>
 </section>
-<section>
+<section style="padding: 120px 0;">
   <div class="container-fluid">
     <div class="main-header text-center" style="position: relative;
     margin: 0 auto 100px;"><h3>Creative Team.</h3><div class="tex-bg"><h1 style="top: -0.7em;
@@ -215,7 +215,7 @@
   </div>
   
 </section>
-<section>
+<section style="padding: 120px 0;">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
