--- a/blogs.html
+++ b/blogs.html
@@ -50,13 +50,13 @@
     </div>
   </div>
 </section>
-<section style="margin-top: 10em;">
+<section style="margin-top: 10em;padding: 120px 0px;">
   <div class="container" style="width: 60%;
   margin: auto;">
     <div class="row">
       <div class="col-lg-12">
         <div class="divs-main"></div>
-         <img src="assets/img/couch.jpg" style="width: 100%;">
+         <img src="assets/img/couch.jpg" style="width: 86.5%;height: auto;">
         </div>
         <div class="row" style="margin-bottom:8em; ">
           <div class="col-lg-2" style=" margin-top: 2em;">
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="divs-main"></div>
-         <img src="assets/img/blog1.jpg" style="width: 100%;">
+         <img src="assets/img/blog1.jpg" style="width: 86.5%;height: auto;">
         </div>
           <div class="row" style="margin-bottom:8em; ">
             <div class="col-lg-2" style=" margin-top: 2em;">
@@ -112,7 +112,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="divs-main"></div>
-         <img src="assets/img/small-couch.jpg" style="width: 100%;">
+         <img src="assets/img/small-couch.jpg" style="width: 86.5%;height: auto;">
         </div>
           <div class="row" style="margin-bottom:8em;">
             <div class="col-lg-2" style=" margin-top: 2em;">
