--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 </section>
-<section style="margin-top:4em;margin-bottom:4em ;">
+<section style="margin-top:4em;margin-bottom:4em; padding: 120px 0px;">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
@@ -103,7 +103,7 @@
     </div>
   </div>
 </section>
-<section>
+<section style="padding: 120px 0px;">
   <div class="row">
     <div class="col-lg-6">
       <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=600&amp;hl=en&amp;q=Louvre museum, 75001 Paris, فرنسا  &amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embedmapgenerator.com/">embed google maps in website</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:600px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:600px;}.gmap_iframe {height:600px!important;}</style></div>
