little fimishing touches

--- a/assets/test.html
+++ b/assets/test.html
@@ -1,177 +1,10 @@
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Image Comparison Slider</title>
-    <link rel="stylesheet" type="text/css" href="css/test.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="https://kit.fontawesome.com/577c3f1cbb.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<<<<<<< HEAD
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-<script src="https://www.cssscript.com/demo/image-comparison-pixelcompare/js/pixelcompare.js?v2"></script>
-<script src="../js/pixelcompare.js"></script>
-<link rel="stylesheet" href="../css/pixelcompare.css">
-    <link rel="stylesheet" href="./style.css">
-
+  <head>
+    <title>responsive</title>
+    <meta name="viewport" content="width=device-width"
   </head>
   <body>
-    <section> 
-      <div class="container">
-       <div class="wrapper">
-    <div class="images">
-      <div class="img-1">
-        <img style="max-width: 100%;" src="https://archo-react.vercel.app/assets/img/after.jpg" alt="">
-      </div>
-      <div class="img-2">
-        <img src='https://archo-react.vercel.app/assets/img/before.jpg' class="resizeimg" alt="">
-      </div>
-    </div>
-    <div class="slider">
-      <div class="drag-line">
-        <span></span>
-      </div>
-      <input type="range" min="0" max="100" value="50">
-    </div>
-  </div>
-      </div>
-    </section> 
-    
-    <script>
-    const slider = document.querySelector(".slider input");
-const img = document.querySelector(".images .img-2");
-const dragLine = document.querySelector(".drag-line");
-const fimg = document.querySelector(".resizeimg");
-const parentWidth = document.querySelector(".wrapper");
-const sliderm = document.querySelector(".slider");
-const title = document.querySelector(".Title");
-const draggable = document.querySelector(".drag-line > span");
-
-window.addEventListener("load", (event) => {
-  console.log("ss");
-  let resizedHt = parentWidth.clientWidth;
-  fimg.style.width = resizedHt + "px";
-});
-
-slider.oninput = (e) => {
-  draggable.classList.add("ccc");
-  console.log("drraed");
-  let sliderVal = slider.value;
-  let x = (dragLine.style.left = sliderVal + "%");
-  let y = parseInt(x);
-  img.style.width = sliderVal + "%";
-
-  //add spacing to left and right of img
-  if (y >= 95) {
-    img.style.width = "95%";
-    dragLine.style.left = "95%";
-  } else if (y <= 5) {
-    img.style.width = "5%";
-    dragLine.style.left = "5%";
-  }
-
-  //hide show title of variant
-  switch (true) {
-    case y >= 60:
-      title.lastElementChild.classList.add("opac");
-      title.firstElementChild.classList.remove("opac");
-      break;
-    case y <= 40:
-      title.lastElementChild.classList.remove("opac");
-      title.firstElementChild.classList.add("opac");
-      break;
-    case y >= 41 && y <= 59:
-      title.lastElementChild.classList.remove("opac");
-      title.firstElementChild.classList.remove("opac");
-      break;
-  }
-};
-//adding width to fied image with the width respect to compare parent container on resize
-window.addEventListener("resize", (event) => {
-  let resizedHt = parentWidth.clientWidth
-  fimg.style.width = resizedHt + 'px'
-})
-
-// function process_touchmove(ev) {
-// // Call preventDefault() to prevent any further handling
-//     ev.preventDefault();
-// }
-
-// Doesnt matter for now awaitig confirmation
-
-//     // Setup our function to run on various events
-//         const detectEventfunction = (event) => {
-//         if (event.type == 'mousedown') {
-//             draggable.classList.add('oopac')
-//         }
-//         if (event.type == 'touchstart') {
-//             draggable.classList.add('oopac')
-//         }
-//         if (event.type == 'touchend') {
-//             draggable.classList.remove('oopac')
-//         }
-//         if (event.type == 'mouseup') {
-//             draggable.classList.remove('oopac')
-//         }
-//     };
-//     // Add our event listeners
-//     window.addEventListener('mousedown', detectEventfunction, false);
-//     window.addEventListener('mouseup', detectEventfunction, false);
-//     window.addEventListener('touchstart', detectEventfunction, false);
-//     window.addEventListener('touchend', detectEventfunction, false);
-//
-
-=======
-  </head>
-  <body>
-    <nav class="navbar fixed-top">
-      <div class="container-fluid black">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Blogs
-            <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="blogs.html">Blogs</a></li>
-              <li><a href="post-detail.html">Post-Details</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-    <script>
-      
-$(document).ready(function(){
-  $(window).scroll(function(){
-  	var scroll = $(window).scrollTop();
-	  if (scroll > 300) {
-	    $(".black").css("background" , "rgb(255, 255, 255)");
-	  }
-
-	  else{
-		  $(".black").css("background" , "transparent");  	
-	  }
-  })
-})
->>>>>>> 48fbbf148cb6841efe90eb96408dc3f954dc0b71
-    </script>
+    <h1>responsive</h1>
   </body>
-  </html>
+</html>
+
